--- a/app/index.html
+++ b/app/index.html
@@ -188,6 +188,7 @@
     <script type="text/javascript" src="System/Filters/TranscriptionStatusNameFilter.js"></script>
     <script type="text/javascript" src="System/Filters/TrustAsHtmlFilter.js"></script>
     <script type="text/javascript" src="System/Filters/RoleNameFilter.js"></script>
+    <script type="text/javascript" src="System/Filters/ShuffleFilter.js"></script>
     <script type="text/javascript" src="System/Filters/SourceRenderFilter.js"></script>
     <script type="text/javascript" src="System/Filters/StatusFilter.js"></script>
     <script type="text/javascript" src="System/Filters/StringToArrayFilter.js"></script>
