--- a/app/App/Content/Content.html
+++ b/app/App/Content/Content.html
@@ -22,24 +22,25 @@
                 <div class="col-auto">Publié le <span ng-bind="content.createDate |  date:'dd/MM/yyyy à HH:mm'"></span></span></div>
             </div>
             <div class="text-justify mt-2 pr-md-3" ng-bind-html="content.content"></div>
-            <div ng-if="content.type == 'blogContent' && content.enableComments == true" ui-view="comment"></div>
+            <div ng-if="content.enableComments == true" ui-view="comment"></div>
         </div>
         <div class="col-md-4 order-md-1">
             <img src="{{ content.illustration | imageRender }}" class="img-fluid" alt="Illustration de {{ content.title }}" title="{{ content.title }}" ng-if="content.illustration != '' && content.illustration != null" />
             <div class="card" ng-if="content.type == 'blogContent'">
                 <ul class="list-group list-group-flush mb-5 mt-5">
-                    <li class="list-group-item" ng-repeat="iContent in contents" ng-class="{'list-group-item active': content.id === iContent.id}"> <!--ajouter la classe active pour l'article sur lequel on est : class="list-group-item active"-->
+                    <li class="list-group-item" ng-repeat="iContent in contents | filter:{type: 'blogContent'}" ng-if="iContent.type == 'blogContent'" ng-class="{'list-group-item active': content.id === iContent.id}">
                         <a ui-sref="transcript.app.content({ id: iContent.id })" ng-if="content.id !== iContent.id">{{ iContent.title }}</a>
                         <span ng-if="content.id === iContent.id">{{ iContent.title }}</span>
                     </li>
                 </ul>
             </div>
-            <div class="card bg-body tags mt-5" ng-if="content.tags.length > 0">
-                <div class="card-body">
-                    <ul>
-                        <li ng-repeat="tag in content.tags">{{ tag }}</li>
-                    </ul>
-                </div>
+            <div class="card" ng-if="content.type == 'staticContent' && content.staticCategory === 'discover'">
+                <ul class="list-group list-group-flush mb-5 mt-5">
+                    <li class="list-group-item" ng-repeat="iContent in contents | filter:{type: 'staticContent', staticCategory: content.staticCategory} | orderBy: 'staticOrder'" ng-class="{'list-group-item active': content.id === iContent.id}">
+                        <a ui-sref="transcript.app.content({ id: iContent.id })" ng-if="content.id !== iContent.id">{{ iContent.title }}</a>
+                        <span ng-if="content.id === iContent.id">{{ iContent.title }}</span>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
