--- a/app/Admin/WillType/Edit/Edit.html
+++ b/app/Admin/WillType/Edit/Edit.html
@@ -37,7 +37,7 @@
                     </button>
                 </div>
 
-                <div class="card text-white bg-danger mb-3 mt-4">
+                <div class="card text-white bg-danger mb-3 mt-4" ng-if="willType.id !== undefined">
                     <h2 class="card-header bg-dark text-white">Zone dangereuse</h2>
                     <div class="card-body">
                         <p>En cliquant ci-dessous, vous supprimerez définitivement cette entité.</p>
