--- a/app/index.html
+++ b/app/index.html
@@ -180,6 +180,7 @@
     <script type="text/javascript" src="System/Filters/ContentTypeNameFilter.js"></script>
     <script type="text/javascript" src="System/Filters/EncodeXMLFilter.js"></script>
     <script type="text/javascript" src="System/Filters/ImageRenderFilter.js"></script>
+    <script type="text/javascript" src="System/Filters/PrefixRenderFilter.js"></script>
     <script type="text/javascript" src="System/Filters/ObjectToIdFilter.js"></script>
     <script type="text/javascript" src="System/Filters/ResourceTypeNameFilter.js"></script>
     <script type="text/javascript" src="System/Filters/TaxonomyEntityNameConstructFilter.js"></script>
