--- a/app/App/Entity/tpl/entity-resources.html
+++ b/app/App/Entity/tpl/entity-resources.html
@@ -4,7 +4,7 @@
         <div class="card-body">
             <div class="alert alert-danger" ng-if="entity.isShown === false">
                 <p><strong>Ce testament n'est pas proposé à la transcription.</strong></p>
-                <p>L'équipe du projet a choisi de ne pas proposer ce testament à la transcription car il peut contenir des informations sensibles. À titre d'information, vous avez tout de même accès à ces métadonnées.</p>
+                <p>L'équipe du projet a choisi de ne pas proposer ce testament à la transcription car il peut contenir des informations sensibles. À titre d'information, vous avez tout de même accès à ses métadonnées.</p>
             </div>
             <div class="alert alert-danger" ng-if="entity.resources.length == 0">
                 Oups ... Cette entité ne possède pas de ressource à transcrire
