--- a/app/App/Home/tpl/home-search-results-content-table.html
+++ b/app/App/Home/tpl/home-search-results-content-table.html
@@ -5,6 +5,8 @@
 </div>
 <div data-ng-repeat="entity in results | limitTo:limitToResults:0" class="row align-items-center">
     <div class="col-5"><a ui-sref="transcript.app.entity({ id: entity.id })" >{{ entity.will.testator.name }}</a></div>
-    <div class="col-5"><span class="badge badge-status" data-ng-class="getStatusClassLabel(entity._embedded.status)">{{ entity._embedded.status | transcriptionStatusName }}</span></div>
+    <div class="col-5">
+        <span class="badge badge-status" data-ng-class="getStatusClassLabel(entity._embedded.status)">{{ entity._embedded.status | transcriptionStatusName:entity.isShown }}</span>
+    </div>
     <div class="col-2 text-center">{{ entity.resources.length }}</div>
 </div>
