--- a/app/App/Training/Exercise/tpl/training-exercise-presentation.html
+++ b/app/App/Training/Exercise/tpl/training-exercise-presentation.html
@@ -1,14 +1,12 @@
 <div ng-if="trainingContent.illustration != null" class="row">
-    <div class="col-md-7">
-        <div ng-include="'App/Training/Presentation/tpl/training-mainContent.html'"></div>
-        <div class="text-center">
-            <button class="btn btn-primary" ng-click="trainingContent.exerciseStatus = 'inProgress'">Commencer l'exercise</button>
-        </div>
-    </div>
+    <div class="col-md-7" ng-include="'App/Training/Presentation/tpl/training-mainContent.html'"></div>
     <div class="col-md-5">
         <img src="{{ trainingContent.illustration | imageRender }}" class="img-fluid" />
     </div>
 </div>
 <div ng-if="trainingContent.illustration == null" class="row">
-    <div class="col-md-10 col-12" ng-include="'App/Training/Presentation/tpl/training-mainContent.html'"></div>
+    <div class="col-md-12 col-12" ng-include="'App/Training/Presentation/tpl/training-mainContent.html'"></div>
+</div>
+<div class="text-center alert alert-info">
+    <button class="btn btn-primary" ng-click="trainingContent.exerciseStatus = 'inProgress'">Commencer l'exercise</button>
 </div>
