--- a/app/App/User/Profile/tpl/profile-public.html
+++ b/app/App/User/Profile/tpl/profile-public.html
@@ -5,7 +5,7 @@
             <ul class="listPages list-unstyled row no-gutters justify-content-center text-center">
                 <li class="col-lg-2 col-md-3 col-sm-4 col-12 pb-3" ng-repeat="entity in iUser._embedded.contributions">
                     <div class="nbPage">{{ entity.resources.length }}</div>
-                    <span title="État de la transcription" class="badge badge-status d-table" ng-class="getStatusClassLabel(entity._embedded.status)">{{ entity._embedded.status | transcriptionStatusName }}</span>
+                    <span title="État de la transcription" class="badge badge-status d-table" ng-class="getStatusClassLabel(entity._embedded.status)">{{ entity._embedded.status | transcriptionStatusName:entity.isShown }}</span>
                     <a ui-sref="transcript.app.entity({ id: entity.id })">
                         <img class="img-fluid" src="{{ imageService.getThumbnail(entity) }}"/>
                     </a>
