--- a/app/index.html
+++ b/app/index.html
@@ -87,13 +87,6 @@
     <script src="web/libraries/js/openseadragon/openseadragon.min.js"></script>
     <script src="web/libraries/angular/angular-openseadragon/src/angular-openseadragon.js"></script>
 
-    <!--
-    <script src="web/libraries/js/jQuery-File-Upload/js/vendor/jquery.ui.widget.js"></script>
-    <script src="web/libraries/js/jQuery-File-Upload/js/jquery.iframe-transport.js"></script>
-    <script src="web/libraries/js/jQuery-File-Upload/js/jquery.fileupload.js"></script>
-    <script src="web/libraries/js/jQuery-File-Upload/js/jquery.fileupload-angular.js"></script>
-    -->
-
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="Transcript/Transcript.js"></script>
     <script type="text/javascript" src="Admin/Admin.js"></script>
@@ -156,6 +149,9 @@
     <script type="text/javascript" src="App/Taxonomy/View/View.js"></script>
     <script type="text/javascript" src="App/Training/Training.js"></script>
     <script type="text/javascript" src="App/Training/Exercise/Exercise.js"></script>
+    <script type="text/javascript" src="App/Training/Exercise/Correction/Correction.js"></script>
+    <script type="text/javascript" src="App/Training/Exercise/Exercise/Exercise.js"></script>
+    <script type="text/javascript" src="App/Training/Exercise/Presentation/Presentation.js"></script>
     <script type="text/javascript" src="App/Training/Presentation/Presentation.js"></script>
     <script type="text/javascript" src="App/Transcript/Transcript.js"></script>
     <script type="text/javascript" src="App/User/User.js"></script>
