--- a/app/Admin/Entity/Edit/Edit.html
+++ b/app/Admin/Entity/Edit/Edit.html
@@ -6,7 +6,7 @@
         <span class="alert-message" ng-bind-html="flash.message | trustAsHtml"></span>
     </div>
     <div class="alert alert-info">
-        <p>Déposez le dossier contenant les images de votre testament <br/>(dont le nom doit correspondre au numéro de numérisation du testament) dans le dossier <strong>web/toImport</strong> de l'API.</p>
+        <p>Déposez le dossier contenant les images de votre testament <br/>(dont le nom doit correspondre au numéro de numérisation du testament) dans le dossier <strong>resource/iiif/data</strong> du serveur.</p>
     </div>
 </div>
 
