--- a/app/Admin/Training/Edit/tpl/edit-exercise.html
+++ b/app/Admin/Training/Edit/tpl/edit-exercise.html
@@ -8,8 +8,7 @@
         <label for="admin-trainingContent-edit-exercise-image" class="col-md-2 col-form-label text-md-right">Image à transcrire <span class="red-color">*</span></label>
         <div class="col-md-10">
             <input id="admin-trainingContent-edit-exercise-image" type="string" class="form-control form-control-sm" data-ng-model="trainingContent.exerciseImageToTranscribe" required="required" />
-            <small class="form-text text-muted">Spécifiez une URL externe, ou uploadez une image par la suite</small>
-            <div ng-if="trainingContent.exerciseImageToTranscribe != null"><img src="{{ trainingContent.exerciseImageToTranscribe | imageRender }}" class="img-150px" /></div>
+            <small class="form-text text-muted">Spécifiez le nom de l'image que vous avez déposé dans <strong>resource/iiif/data/exercise</strong> sur le serveur</small>
         </div>
     </div>
     <div class="form-group row">
