--- a/app/App/Edition/tpl/edition-viewer.html
+++ b/app/App/Edition/tpl/edition-viewer.html
@@ -1,5 +1,7 @@
-<div>
-    <!--<seadragon options="openseadragon" />-->
-    <!--<div data-ng-bind="loadViewer('transcript-image')" ></div>-->
-    <img id="transcript-image" class="img-fluid" src="{{ api_web  }}/images/data/testament_{{ entity.willNumber| willNumberFormat }}/JPEG/FRAN_Poilus_t-{{ entity.willNumber| willNumberFormat }}_{{ resource.images[0] | willNumberFormat:2 }}_L.jpg" />
+<div class="card-group h-100 no-gutters">
+    <div class="card viewer bg-dark">
+        <div class="p-4 h-100">
+            <seadragon options="openseadragon" />
+        </div>
+    </div>
 </div>
