--- a/app/App/Training/Exercise/Presentation/Presentation.html
+++ b/app/App/Training/Exercise/Presentation/Presentation.html
@@ -10,6 +10,19 @@
 <main class="container" role="main" ng-if="trainingContent.pageStatus == 'public'">
     <div ng-include="'App/Training/tpl/training-header.html'"></div>
 
+    <div ng-if="trainingContent.illustration != null" class="row">
+        <div class="col-md-7" ng-include="'App/Training/Presentation/tpl/training-mainContent.html'"></div>
+        <div class="col-md-5">
+            <img src="{{ trainingContent.illustration | imageRender }}" class="img-fluid" />
+        </div>
+    </div>
+    <div ng-if="trainingContent.illustration == null" class="row">
+        <div class="col-md-12 col-12" ng-include="'App/Training/Presentation/tpl/training-mainContent.html'"></div>
+    </div>
+    <div class="text-center alert alert-info">
+        <a ui-sref="transcript.app.training.exercise.exercise">Commencer l'exercise</a>
+    </div>
+
     <div ng-include="'App/Training/Exercise/tpl/training-exercise.html'"></div>
 
     <hr />
